rearrange methods and discussion order

--- a/work2/reports/03-methods/03-methods.tex
+++ b/work2/reports/03-methods/03-methods.tex
@@ -4,7 +4,8 @@
 This section describes the methodology used in the study. It should include details about data collection, experimental design, and analytical techniques.
 
 \input{03-methods/03.1-methods-knn}
-\input{03-methods/03.2-methods-reduction}
-\input{03-methods/03.3-methods-svm}
+\input{03-methods/03.2-methods-svm}
+\input{03-methods/03.3-methods-reduction}
+\input{03-methods/03.4-methods-statistical-analysis}
 
 % Add more content here as needed
