--- a/work2/reports/04-results-and-analysis/04.2-discussion.tex
+++ b/work2/reports/04-results-and-analysis/04.2-discussion.tex
@@ -3,16 +3,10 @@
 
 In this section, interpret the results, discuss their implications, and relate them back to the research question or hypothesis. Address any limitations of the study and suggest areas for future research.
 
-% TODO: Interpret the results in the context of the research question/hypothesis
-% TODO: Compare findings with existing literature
-% TODO: Discuss the implications of the results
-% TODO: Address any unexpected findings
-% TODO: Acknowledge limitations of the study
-% TODO: Suggest directions for future research
-
 \input{04-results-and-analysis/04.2.1-discussion-knn}
-\input{04-results-and-analysis/04.2.2-discussion-reduction}
-\input{04-results-and-analysis/04.2.3-discussion-svm}
-\input{04-results-and-analysis/04.2.4-statistical-analysis}
+\input{04-results-and-analysis/04.2.2-discussion-svm}
+
+\input{04-results-and-analysis/04.2.3-discussion-reduction}
+\input{04-results-and-analysis/04.2.4-discussion-summary.tex}
 
 % Add more content here as needed
