update significant pair tables

--- a/work2/reports/tables/knn_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/knn_significant_pairs_mushroom.tex
@@ -4,7 +4,7 @@
 \label{tab:knn_significant_pairs_mushroom}
 \begin{tabular}{rlllr}
 \toprule
-k & distance_func & voting_func & weighting_func & mean_f1 \\
+K & Distance Func & Voting Func & Weighting Func & Mean F1 \\
 \midrule
 1 & ManhattanDistance & MajorityClassVote & EqualWeighting & 1.000 \\
 1 & EuclideanDistance & ShepardsWorkVote & EqualWeighting & 1.000 \\
