--- a/work2/reports/tables/svm_significant_pairs_hepatitis.tex
+++ b/work2/reports/tables/svm_significant_pairs_hepatitis.tex
@@ -2,13 +2,13 @@
 \centering
 \caption{Significant Differences in SVM Models}
 \label{tab:svm_significant_pairs_hepatitis}
-\begin{tabular}{rlrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrl}
+\begin{tabular}{rlr}
 \toprule
-C & kernel_type & f1_0 & f1_1 & f1_2 & f1_3 & f1_4 & f1_5 & f1_6 & f1_7 & f1_8 & f1_9 & train_time_0 & train_time_1 & train_time_2 & train_time_3 & train_time_4 & train_time_5 & train_time_6 & train_time_7 & train_time_8 & train_time_9 & test_time_0 & test_time_1 & test_time_2 & test_time_3 & test_time_4 & test_time_5 & test_time_6 & test_time_7 & test_time_8 & test_time_9 & mean_f1 & mean_train_time & mean_test_time & model_label \\
+C & Kernel Type & Mean F1 \\
 \midrule
-3 & rbf & 0.857 & 0.966 & 1.000 & 1.000 & 1.000 & 1.000 & 0.909 & 1.000 & 0.957 & 1.000 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.969 & 0.001 & 0.000 & C3Rbf \\
-5 & rbf & 0.828 & 0.966 & 1.000 & 1.000 & 0.960 & 1.000 & 0.957 & 1.000 & 1.000 & 1.000 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.971 & 0.001 & 0.000 & C5Rbf \\
-7 & sigmoid & 0.857 & 0.667 & 0.815 & 0.909 & 0.846 & 0.846 & 0.846 & 0.750 & 0.909 & 0.846 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.001 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.000 & 0.829 & 0.001 & 0.000 & C7Sig \\
+3 & rbf & 0.969 \\
+5 & rbf & 0.971 \\
+7 & sigmoid & 0.829 \\
 \bottomrule
 \end{tabular}
 \end{table}
