--- a/work2/reports/tables/svm_significant_pairs_mushroom.tex
+++ b/work2/reports/tables/svm_significant_pairs_mushroom.tex
@@ -2,18 +2,18 @@
 \centering
 \caption{Significant Differences in SVM Models}
 \label{tab:svm_significant_pairs_mushroom}
-\begin{tabular}{rlrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrl}
+\begin{tabular}{rlr}
 \toprule
-C & kernel_type & f1_0 & f1_1 & f1_2 & f1_3 & f1_4 & f1_5 & f1_6 & f1_7 & f1_8 & f1_9 & train_time_0 & train_time_1 & train_time_2 & train_time_3 & train_time_4 & train_time_5 & train_time_6 & train_time_7 & train_time_8 & train_time_9 & test_time_0 & test_time_1 & test_time_2 & test_time_3 & test_time_4 & test_time_5 & test_time_6 & test_time_7 & test_time_8 & test_time_9 & mean_f1 & mean_train_time & mean_test_time & model_label \\
+C & Kernel Type & Mean F1 \\
 \midrule
-1 & linear & 0.983 & 0.971 & 0.976 & 0.968 & 0.982 & 0.975 & 0.964 & 0.978 & 0.973 & 0.976 & 0.556 & 0.793 & 0.566 & 0.486 & 0.579 & 0.412 & 0.631 & 0.548 & 0.694 & 0.514 & 0.015 & 0.013 & 0.014 & 0.017 & 0.014 & 0.014 & 0.013 & 0.015 & 0.013 & 0.014 & 0.975 & 0.578 & 0.014 & C1Lin \\
-1 & rbf & 0.983 & 0.991 & 0.982 & 0.992 & 0.991 & 0.988 & 0.988 & 0.996 & 0.990 & 0.988 & 0.180 & 0.178 & 0.178 & 0.180 & 0.178 & 0.176 & 0.176 & 0.179 & 0.178 & 0.176 & 0.030 & 0.030 & 0.030 & 0.030 & 0.030 & 0.030 & 0.030 & 0.030 & 0.031 & 0.030 & 0.989 & 0.178 & 0.030 & C1Rbf \\
-3 & linear & 0.989 & 0.978 & 0.981 & 0.971 & 0.985 & 0.975 & 0.978 & 0.981 & 0.986 & 0.972 & 0.724 & 0.682 & 0.690 & 0.993 & 0.759 & 1.305 & 0.662 & 0.961 & 0.734 & 0.810 & 0.012 & 0.012 & 0.012 & 0.012 & 0.011 & 0.010 & 0.013 & 0.013 & 0.012 & 0.012 & 0.980 & 0.832 & 0.012 & C3Lin \\
-3 & rbf & 0.996 & 1.000 & 1.000 & 1.000 & 0.999 & 0.997 & 1.000 & 1.000 & 0.997 & 0.997 & 0.121 & 0.121 & 0.120 & 0.124 & 0.121 & 0.122 & 0.122 & 0.119 & 0.121 & 0.120 & 0.018 & 0.018 & 0.018 & 0.018 & 0.018 & 0.018 & 0.018 & 0.018 & 0.018 & 0.018 & 0.999 & 0.121 & 0.018 & C3Rbf \\
-5 & linear & 0.977 & 0.985 & 0.985 & 0.972 & 0.994 & 0.975 & 0.987 & 0.987 & 0.992 & 0.973 & 1.316 & 1.133 & 1.250 & 1.178 & 1.111 & 1.675 & 1.068 & 1.013 & 1.131 & 0.975 & 0.013 & 0.013 & 0.012 & 0.011 & 0.013 & 0.012 & 0.015 & 0.012 & 0.013 & 0.014 & 0.983 & 1.185 & 0.013 & C5Lin \\
-5 & rbf & 0.999 & 1.000 & 1.000 & 1.000 & 1.000 & 1.000 & 1.000 & 1.000 & 0.997 & 1.000 & 0.101 & 0.100 & 0.098 & 0.103 & 0.104 & 0.100 & 0.099 & 0.101 & 0.102 & 0.102 & 0.014 & 0.014 & 0.013 & 0.014 & 0.014 & 0.014 & 0.014 & 0.014 & 0.014 & 0.014 & 1.000 & 0.101 & 0.014 & C5Rbf \\
-7 & linear & 0.980 & 0.986 & 0.990 & 0.972 & 0.986 & 0.975 & 0.989 & 0.976 & 0.991 & 0.984 & 1.351 & 1.625 & 1.357 & 1.318 & 1.506 & 1.418 & 2.815 & 1.468 & 1.493 & 1.878 & 0.016 & 0.014 & 0.015 & 0.015 & 0.016 & 0.016 & 0.014 & 0.015 & 0.016 & 0.016 & 0.983 & 1.623 & 0.015 & C7Lin \\
-7 & sigmoid & 0.390 & 0.459 & 0.708 & 0.391 & 0.479 & 0.428 & 0.432 & 0.368 & 0.358 & 0.346 & 0.807 & 0.804 & 0.478 & 0.800 & 0.807 & 0.805 & 0.801 & 0.802 & 0.809 & 0.806 & 0.077 & 0.078 & 0.048 & 0.077 & 0.078 & 0.077 & 0.077 & 0.077 & 0.077 & 0.077 & 0.436 & 0.772 & 0.075 & C7Sig \\
+1 & linear & 0.975 \\
+1 & rbf & 0.989 \\
+3 & linear & 0.980 \\
+3 & rbf & 0.999 \\
+5 & linear & 0.983 \\
+5 & rbf & 1.000 \\
+7 & linear & 0.983 \\
+7 & sigmoid & 0.436 \\
 \bottomrule
 \end{tabular}
 \end{table}
