explained which groups of models pass friendman test + additional tables added

--- a/work2/reports/04-results-and-analysis/04.2.4-discussion-summary.tex
+++ b/work2/reports/04-results-and-analysis/04.2.4-discussion-summary.tex
@@ -69,16 +69,43 @@ If the Nemenyi test fails, we cannot proceed with post-hoc testing as the result
 \begin{figure}[!ht]
     \centering
     \includegraphics[width=0.8\textwidth]{figures/p_values_vs_num_samples_mushroom.png}
-    \includegraphics[width=0.8\textwidth]{figures/p_values_vs_num_samples_hepatitis.png}
     \caption{P values vs. number of samples for different models and sampling methods for the datasets}
-\label{fig:p-values-vs-num-samples}
+\label{fig:p_values_vs_num_samples_mushroom}
 \end{figure}
 
-As seen in the plots in Figure~\ref{fig:p-values-vs-num-samples}, we perform linear sampling and top sampling with a variety
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/p_values_vs_num_samples_hepatitis.png}
+    \caption{P values vs. number of samples for different models and sampling methods for the datasets}
+\label{fig:p_values_vs_num_samples_hepatitis}
+\end{figure}
+
+As seen in the plots in the above figures, we perform linear sampling and top sampling with a variety
 of sample sizes. With top sampling, we sample the top models based on their f1 score, while linear sampling samples models
 evenly across the performance spectrum. The results show that the Nemenyi test fails across the various sample sizes for both datasets
-when using top sampling but passes when using linear sampling. This indicates that the top sampling method is not suitable for our analysis
-as we cannot perform post-hoc testing on the models. Therefore, we must proceed with linear sampling for our analysis.
+when using top sampling but passes when using linear sampling.This indicates that the top sampling method is not suitable for our analysis
+as we cannot perform post-hoc testing on the models.
+
+To further back up our decision, below are tables of the Friedman test results for both datasets.
+
+\input{tables/friedman_test_results_mushroom}
+\input{tables/friedman_test_results_hepatitis}
+
+These tables display the p-values for the Friedman test across various combinations
+of sampling methods, model types, and scoring metric. The same information from the figures 
+above is presented in tabular form, along with additional results.
+
+From the tables above the same conclusion can be drawn from the Friedman test results.
+From the tabular form, we can infer which group of models passed the Friedman test, and which did not.
+
+Employing linear sampling, we can see that the Friedman test passes on the majority
+of cases for both datasets. From our analysis, using linear sampling failed the Friedman test
+only once for the mushroom dataset (using KNN-Reduction and F1 scoring metric) and also once
+for the hepatitis dataset (using KNN-Reduction and F1 scoring metric also). Employing top sampling,
+the Friedman test failed for all but one case on both datasets (using SVM and F1 scoring metric).
+
+Therefore, we proceed with the Nemenyi test using linear sampling for our analysis to
+ensure the reliability of the post-hoc testing results.
 
 % TODO: Citation needed
 \subsubsection{Post-Hoc Tests}
