--- a/work2/reports/tables/friedman_test_results_mushroom.tex
+++ b/work2/reports/tables/friedman_test_results_mushroom.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Friedman Test Results}
+\caption{Friedman Test Results Mushroom}
 \label{tab:friedman_test_results_mushroom}
 \begin{tabular}{ll}
 \toprule
