--- a/work2/reports/tables/friedman_test_results_hepatitis.tex
+++ b/work2/reports/tables/friedman_test_results_hepatitis.tex
@@ -1,6 +1,6 @@
 \begin{table}
 \centering
-\caption{Friedman Test Results}
+\caption{Friedman Test Results Hepatitis}
 \label{tab:friedman_test_results_hepatitis}
 \begin{tabular}{ll}
 \toprule
