--- a/work2/reports/04-results-and-analysis/04.2.2-discussion-svm.tex
+++ b/work2/reports/04-results-and-analysis/04.2.2-discussion-svm.tex
@@ -71,3 +71,13 @@ at the 95\% confidence level. The full tables containing the p-values for each p
 
 \include{tables/svm_significant_pairs_hepatitis}
 \include{tables/svm_significant_pairs_mushroom}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.4\textwidth]{figures/int.png}
+    \caption{Nemenyi Test Results for SVM on Mushroom Dataset}
+    \label{fig:nemenyi_test_results_SVM_mushroom}
+\end{figure}
+
+To further analyze the hyperparameters we plotted the effects of each hyperparameter on the F1 score.
+
