add interaction_effects_SVM_hepatitis fig

--- a/work2/reports/04-results-and-analysis/04.2.2-discussion-svm.tex
+++ b/work2/reports/04-results-and-analysis/04.2.2-discussion-svm.tex
@@ -74,9 +74,9 @@ at the 95\% confidence level. The full tables containing the p-values for each p
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.4\textwidth]{figures/int.png}
+    \includegraphics[width=0.4\textwidth]{figures/interaction_effects_SVM_hepatitis.png}
     \caption{Nemenyi Test Results for SVM on Mushroom Dataset}
-    \label{fig:nemenyi_test_results_SVM_mushroom}
+    \label{fig:interaction_effects_SVM_hepatitis}
 \end{figure}
 
 To further analyze the hyperparameters we plotted the effects of each hyperparameter on the F1 score.
