--- a/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
+++ b/work2/reports/04-results-and-analysis/04.2.1-discussion-knn.tex
@@ -77,5 +77,47 @@ This difference may be due to the hepatitis dataset's smaller size and more dist
 making it easier for the k-NN algorithm to make accurate predictions. These distinct class separations may also explain why the k = 1 configuration
 performed best on the hepatitis dataset, as the algorithm can make more precise decisions with fewer neighbors.
 
+Below are the Nemenyi test results for the KNN models on the hepatitis and mushroom datasets respectively.
+
+For the below analysis of both the KNN model, values closer to 1 indicate no significant difference between models,
+whereas values closer to 0 indicate a significant difference.
+
+The diagonal values (top left to bottom right) are always 1 and report no significant difference
+as they represent the comparison of a model with itself.
+
+To determine statistical significance, we use a confidence level of 0.95 (95\% confidence interval) for the Nemenyi test.
+Therefore, any values greater than 0.05 indicate that the models are not significantly different from each other.
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/nemenyi_test_results_KNN_hepatitis.png}
+    \caption{Nemenyi test results for KNN models on the hepatitis dataset}
+\label{fig:nemenyi_test_results_KNN_hepatitis}
+\end{figure}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{figures/nemenyi_test_results_KNN_mushroom.png}
+    \caption{Nemenyi test results for KNN models on the mushroom dataset}
+\label{fig:nemenyi_test_results_KNN_mushroom}
+\end{figure}
+
+The Nemenyi test results for the KNN models on the hepatitis dataset reveal two statistically distinct
+groups of model configurations. The first group consists of k = 1 configurations
+(with Manhattan and Euclidean distance) and k=3 with Manhattan distance, which all perform similarly to each other (p=1.00).
+The second group includes configurations with higher k values (3,5,7) using various distance metrics,
+which also perform similarly within their group (p=1.00) but significantly differently from the first
+group (some comparisons yield p=0.04, below the 0.05 threshold). This clear separation suggests that the choice of k-value
+has a more substantial impact on model performance than the choice of distance metric, with k=1 configurations behaving distinctly from higher k-values.
+
+The Nemenyi test results for the KNN models on the mushroom dataset reveal two main groups of model configurations.
+The first group consists of k=1 configurations and k=3 with Manhattan distance, which perform similarly
+(p=0.85 $-$ 1.00), though with some variation within the group. The second group includes configurations
+from k5ManShpInf through k7ChebShpRtf, which show high similarity within their group (p=0.95 $-$ 1.00).
+Some of these groups perform significantly differently from each other, given the p-values fall below the 0.05 threshold.
+
+We can deduce that the k-value has a substantial impact on model performance on both datasets. 
+
+
 
 
